in progress worklet fallback

--- a/ui-experiments/overtones/index-original-backup.html
+++ b/ui-experiments/overtones/index-original-backup.html
@@ -497,7 +497,7 @@
                 labelPrecision: 1 
             },
             {
-                name: "2. Spectral Detuned Harmonics (Microtonal)",
+                name: "2x. Spectral Detuned Harmonics (Microtonal)",
                 description: "Ratios are slightly detuned (microtonal) from integer values. This creates complex beating and psychoacoustic shimmer, popular in spectral music.",
                 ratios: [1.0, 2.01, 2.99, 4.05, 5.0, 6.02, 7.0, 8.03, 8.98, 10.04, 11.0, 12.01],
                 labelPrecision: 2 
