layout and tonewheel style

--- a/ui-experiments/overtones/index.html
+++ b/ui-experiments/overtones/index.html
@@ -135,8 +135,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="control-row">
-                    <div class="labeled-control max-w-full">
+                <div class="control-row grid grid-cols-1 lg:grid-cols-4 gap-4">
+                    
+                    <!-- Drawbars -->
+                    <div class="labeled-control max-w-full col-span-3">
                         <span>
                             Drawbars
                         </span>
@@ -148,37 +150,35 @@
                             <button id="randomize-drawbars-button" class="drawbar-action-btn mx-1">Randomize</button>
                         </div>
                     </div>
+
+
+                    <!-- Main Tonewheel Canvas -->
+                    <div id="tonewheel-container" class="canvas-container col-span-1">
+                        <!-- Main tonewheel p5.js canvas will be injected here -->
+                        <div class="controls-overlay">
+                            <!-- Responsive Visualization Overlay Controls -->
+                            <div class="absolute top-2 right-2 z-10 bg-slate-900/70 rounded-xl p-2 shadow-lg flex flex-col gap-2 items-end w-auto max-w-xs md:max-w-sm">
+                                <div class="flex items-center gap-2 w-full">
+                                    <label for="spread-slider" class="text-blue-300 text-xs md:text-sm font-medium mr-1">Spread</label>
+                                    <input type="range" id="spread-slider" min="0" max="2" step="0.01" value="1"
+                                        class="w-16 md:w-24 accent-blue-400 bg-transparent rounded h-1 mx-1">
+                                    <span id="spread-value" class="text-blue-400 text-xs md:text-sm font-normal min-w-[32px] md:min-w-[38px] max-w-[48px] md:max-w-[60px] truncate text-left overflow-hidden">100%</span>
+                                </div>
+                                <div class="flex items-center gap-2 w-full">
+                                    <label for="viz-freq-slider" class="text-blue-300 text-xs md:text-sm font-medium mr-1">Speed</label>
+                                    <input type="range" id="viz-freq-slider" min="0.1" max="10" step="0.1" value="2.0"
+                                        class="w-16 md:w-24 accent-blue-400 bg-transparent rounded h-1 mx-1">
+                                    <span id="viz-freq-value" class="text-blue-400 text-xs md:text-sm font-normal min-w-[32px] md:min-w-[38px] max-w-[48px] md:max-w-[60px] truncate text-left overflow-hidden">2.0 Hz</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
                 </div>
             </div>
         </div>
     </div>
-
-     <!-- Visualization Canvases -->
-        <div class="visualization-section">
-            <!-- Main Tonewheel Canvas -->
-            <div id="tonewheel-container" class="canvas-container">
-                <!-- Main tonewheel p5.js canvas will be injected here -->
-
-                <!-- Visualization Controls Overlay -->
-                <div class="controls-overlay">
-                    <!-- Streamlined Visualization Overlay Controls -->
-                    <div class="absolute top-4 right-4 z-10 bg-slate-900/70 rounded-xl p-3 shadow-lg flex flex-col gap-2 items-end w-auto max-w-xs">
-                        <div class="flex items-center gap-2 w-full">
-                            <label for="spread-slider" class="text-blue-300 text-sm font-medium mr-1">Spread</label>
-                            <input type="range" id="spread-slider" min="0" max="2" step="0.01" value="1"
-                                class="w-24 accent-blue-400 bg-transparent rounded h-1 mx-1">
-                            <span id="spread-value" class="text-blue-400 text-sm font-normal min-w-[38px] max-w-[60px] truncate text-left overflow-hidden">100%</span>
-                        </div>
-                        <div class="flex items-center gap-2 w-full">
-                            <label for="viz-freq-slider" class="text-blue-300 text-sm font-medium mr-1">Speed</label>
-                            <input type="range" id="viz-freq-slider" min="0.1" max="10" step="0.1" value="2.0"
-                                class="w-24 accent-blue-400 bg-transparent rounded h-1 mx-1">
-                            <span id="viz-freq-value" class="text-blue-400 text-sm font-normal min-w-[38px] max-w-[60px] truncate text-left overflow-hidden">2.0 Hz</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
 
 
     <!-- Status Message Container -->
