--- a/ui-experiments/overtones/index.html
+++ b/ui-experiments/overtones/index.html
@@ -161,7 +161,7 @@
                                 class="absolute top-2 right-2 md:top-4 md:right-4 z-10 bg-slate-900/70 rounded-xl p-2 md:p-3 shadow-lg flex flex-col gap-2 items-end w-auto max-w-xs md:max-w-sm opacity-0 pointer-events-none transition-opacity duration-500">
                                 <div class="flex items-center gap-2 w-full">
                                     <label for="spread-slider"
-                                        class="text-blue-300 text-xs md:text-sm font-medium mr-1">Spread</label>
+                                        class="text-blue-300 text-xs md:text-sm font-medium mr-1">Gain</label>
                                     <input type="range" id="spread-slider" min="0" max="2" step="0.01" value="1"
                                         class="w-16 md:w-24 accent-blue-400 bg-transparent rounded h-1 mx-1">
                                     <span id="spread-value"
