adds base component and controller

--- a/ui-experiments/overtones/index.html
+++ b/ui-experiments/overtones/index.html
@@ -127,7 +127,7 @@
                                     <!-- P5 canvas injected here -->
                                 </div>
                                 <div class="flex items-stretch justify-end gap-4 flex-wrap">
-                                    <button id="add-wave-button" class="btn btn-primary">Use Waveform</button>
+                                    <button id="add-wave-button" class="btn btn-primary">Harmonize</button>
                                     <button id="export-wav-button" class="btn btn-secondary">Download</button>
                                 </div>
 
